@@ -1,3 +1,8 @@
+2010-06-21  Colin Watson  <cjwatson@ubuntu.com>
+
+	* kern/efi/mm.c (grub_efi_mm_init): Handle systems with memory maps
+	larger than MEMORY_MAP_SIZE.
+
 2010-06-21  BVK Chaitanya  <bvk.groups@gmail.com>
 
 	Fix parallel build.
